objects/Questionario__c.object
<CustomObject>
    <label>Questionário</label>
    <nameField>
        <displayFormat>Q - {00000}</displayFormat>
        <label>Questionário</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionários</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Ordem__c</fullName>
        <label>Ordem</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secao__c</fullName>
        <label>Seção</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pergunta__c</fullName>
        <label>Pergunta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Projeto</fullName>
                </value>
                <value>
                    <fullName>Ambiente</fullName>
                </value>
                <value>
                    <fullName>Edificação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observacao__c</fullName>
        <label>Observação</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextoAjuda__c</fullName>
        <label>Texto de ajuda</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subcategoria__c</fullName>
        <label>Subcategoria</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Categoria__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acessibilidade</fullName>
                </value>
                <value>
                    <fullName>Comunição e usuário</fullName>
                </value>
                <value>
                    <fullName>Conforto acústico</fullName>
                </value>
                <value>
                    <fullName>Conforto térmico</fullName>
                </value>
                <value>
                    <fullName>Conforto visual</fullName>
                </value>
                <value>
                    <fullName>Custos</fullName>
                </value>
                <value>
                    <fullName>Documentação</fullName>
                </value>
                <value>
                    <fullName>Espaços</fullName>
                </value>
                <value>
                    <fullName>Gestão e manutenção</fullName>
                </value>
                <value>
                    <fullName>Infraestrutura</fullName>
                </value>
                <value>
                    <fullName>Local de uso e ocupação</fullName>
                </value>
                <value>
                    <fullName>Materiais e acabamentos</fullName>
                </value>
                <value>
                    <fullName>Mobilidade</fullName>
                </value>
                <value>
                    <fullName>Promoção e saúde</fullName>
                </value>
                <value>
                    <fullName>Segurança</fullName>
                </value>
                <value>
                    <fullName>Sociais e culturais</fullName>
                </value>
                <value>
                    <fullName>Sustentabilidade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemPrincipal__c</fullName>
        <label>Item Principal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemPrincipalPai__c</fullName>
        <formula>ISBLANK(ItemPrincipal__c )</formula>
        <label>Item principal pai</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RespostaDiferente__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indica que a pergunta tem resposta diferente do que está cadastrado na lista global. Resposta padrão: Péssimo, Ruim, Regular, Bom, Excelente / Não se aplica</inlineHelpText>
        <label>Resposta diferente</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ordem__c</columns>
        <columns>Categoria__c</columns>
        <columns>Subcategoria__c</columns>
        <columns>Secao__c</columns>
        <columns>Pergunta__c</columns>
        <columns>ItemPrincipal__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <listViews>
        <fullName>CategoriaProjeto</fullName>
        <columns>NAME</columns>
        <columns>Ordem__c</columns>
        <columns>Categoria__c</columns>
        <columns>Subcategoria__c</columns>
        <columns>Secao__c</columns>
        <columns>RespostaDiferente__c</columns>
        <columns>Pergunta__c</columns>
        <columns>ItemPrincipal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Categoria__c</field>
            <operation>equals</operation>
            <value>Projeto</value>
        </filters>
        <label>Categoria Projeto</label>
    </listViews>
    <listViews>
        <fullName>CategoriaAmbiente</fullName>
        <columns>NAME</columns>
        <columns>Ordem__c</columns>
        <columns>Categoria__c</columns>
        <columns>Subcategoria__c</columns>
        <columns>Secao__c</columns>
        <columns>RespostaDiferente__c</columns>
        <columns>Pergunta__c</columns>
        <columns>ItemPrincipal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Categoria__c</field>
            <operation>equals</operation>
            <value>Ambiente</value>
        </filters>
        <label>Categoria Ambiente</label>
    </listViews>
    <listViews>
        <fullName>CategoriaEdificacao</fullName>
        <columns>NAME</columns>
        <columns>Ordem__c</columns>
        <columns>Categoria__c</columns>
        <columns>Subcategoria__c</columns>
        <columns>Secao__c</columns>
        <columns>RespostaDiferente__c</columns>
        <columns>Pergunta__c</columns>
        <columns>ItemPrincipal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Categoria__c</field>
            <operation>equals</operation>
            <value>Edificação</value>
        </filters>
        <label>Categoria Edificação</label>
    </listViews>
</CustomObject>